update meta close  #51

--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>React Calendar App</title>
+    <meta
+      name="description"
+      content="Reactで作成したカレンダーアプリ。Googleカレンダーとの連携が可能で、ドラッグでのカレンダー追加・更新に対応。"
+    />
+    <meta name="keywords" content="Calendar,React,TypeScript" />
+    <meta name="author" content="KadoBloG" />
+    <meta
+      name="og:description"
+      content="Reactで作成したカレンダーアプリ。Googleカレンダーとの連携が可能で、ドラッグでのカレンダー追加・更新に対応。"
+    />
+    <meta name="og:title" content="React Calendar App" />
+    <meta name="og:type" content="website" />
+    <meta name="og:url" content="https://sub9.fast5-blog.com" />
+    <meta name="og:image" content="https://sub9.fast5-blog.com/images/icatch.png" />
+    <meta name="og:site_name" content="React Calendar App" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@KadoUniversity" />
+    <meta name="twitter:title" content="React Calendar App" />
   </head>
   <body>
     <div id="root"></div>
